# sonicgraph

./: README.md  main.py  pyproject.toml
data/: am_library_imported.json
pipeline/: am.py  models.py  normalise.py
src/sonicgraph/: __init__.py
src/sonicgraph/pipeline/: am.py  models.py  normalise.py
tests/pipeline/: test_normalise.py  test_parse.py
