[project]
name = "sonicgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jaki", email = "jacopocarrani@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
]

[project.scripts]
sonicgraph = "sonicgraph:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
